# mitra-ai

./: .gitignore  CLAUDE.md  GEMINI.md  GITHUB_ACTIONS_SETUP.md  Problem_Statement.md  Project Mitra.md  Project Mitra_Version_ 1.0_Date_ August 13, 2025....md  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: .gitignore  firebase.json  pubspec.yaml
app/android/: build.gradle.kts
app/lib/: firebase_options.dart  main.dart
docs/: FIREBASE_SETUP.md  GROUNDING.md  IMAGE_GEN.md  LIVE_API.md  STRUCTURED_OP.md  TEXT_GEN.md
mitra/: README.md  pubspec.yaml
mitra/linux/: CMakeLists.txt
mitra/test/: widget_test.dart
mitra/web/: index.html  manifest.json
mitra/windows/: CMakeLists.txt
server/: .dockerignore  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  cors.json  firestore.indexes.json  firestore.rules  main.py  requirements.txt  run_dev.py  storage.rules  test_firebase_connection.py  test_server.py  test_trigger.txt
server/core/: __init__.py  config.py
server/models/: __init__.py  chat.py  common.py  user.py  user.py.backup  wellness.py
server/repository/: README.md  __init__.py  base_repository.py  chat_repository.py  firestore_repository.py  firestore_repository.py.backup  user_repository.py  wellness_repository.py
server/routers/: __init__.py  chat.py  user.py  voice.py  wellness.py
server/scripts/: configure-cloud-run.sh  resolve-conflicts.sh  setup-github-actions-sa.sh  upload-secrets.sh
server/services/: README.md  __init__.py  base_gemini_service.py  enhanced_wellness_service.py  (+12 more)
(+43 files in other folders)
